<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baseball"
    tools:context="com.example.android.scorecounterbaseball.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/team_nameA"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/teamA_score"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="40dp"
                android:onClick="addOneForTeamA"
                android:text="@string/teamA_single"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#455A64"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:onClick="addThreePointsForTeamA"
                android:text="@string/teamA_pitchWin"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#263238"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:onClick="addFourForTeamA"
                android:text="@string/teamA_homeRun"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#880E4F"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:onClick="addStrikeForTeamA"
                android:text="@string/teamA_strikesbutton"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#4A148C"/>

            <TextView
                android:id="@+id/teamA_strikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/teamA_strikes"
                android:textAllCaps="true"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/team_nameB"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/teamB_score"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="40dp"
                android:onClick="addOneForTeamB"
                android:text="@string/teamB_single"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#330000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:onClick="addThreePointsForTeamB"
                android:text="@string/teamB_pitchWin"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#4B0082"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:onClick="addFourForTeamB"
                android:text="@string/teamB_homeRun"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#483D8B"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:onClick="addStrikeForTeamB"
                android:text="@string/teamB_strikesbutton"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:backgroundTint="#191970"/>

            <TextView
                android:id="@+id/teamB_strikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/teamB_strikes"
                android:textAllCaps="true"
                android:textColor="#ffffff" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetGame"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:background="@android:color/transparent"/>

</RelativeLayout>
